--- a/site_ViveBio/src/views/products/productCard.ejs
+++ b/site_ViveBio/src/views/products/productCard.ejs
@@ -8,7 +8,7 @@
       <main>
         <section class="producto">
           <div class="producto__texto">
-            <h1><%= product.name %></h1>
+            <h1><%= products.name %></h1>
             <div class="container-imagen-texto">
             <div class="producto__imagen">
               <div class="box-imagen">
