Carousel and Nav Mobile added

--- a/site_ViveBio/src/views/index.ejs
+++ b/site_ViveBio/src/views/index.ejs
@@ -5,9 +5,7 @@
 
     <body class="home">
         <%- include('./partials/header') %>
-            <!-- <div class="carrusel__home">
-                <img src="/images/logo.png" alt="logo" class="banner">
-            </div> -->
+        
             <!-- Inicio de carrusel -->
             <div class="slider">
                 <div class="slides">
@@ -17,16 +15,20 @@
                     <input type="radio" name="radio-btn" id="radio4">
                     <!-- imagenes de carrusel -->
                     <div class="slide first">
-                        <img src="/images/producto1.jpeg" alt="">
+                        <p>Lorem ipsum dolor sit amet.</p>
+                        <img src="/images/carousel_img_1.jpg" alt="">
                     </div>
                     <div class="slide">
-                        <img src="/images/producto2.jpeg" alt="">
+                        <p>Lorem ipsum dolor sit amet.</p>
+                        <img src="/images/carousel_img_2.jpg" alt="">
                     </div>
                     <div class="slide">
-                        <img src="/images/producto3.jpeg" alt="">
+                        <p>Lorem ipsum dolor sit amet.</p>
+                        <img src="/images/carousel_img_3.jpg" alt="">
                     </div>
                     <div class="slide">
-                        <img src="/images/producto1.jpeg" alt="">
+                        <p>Lorem ipsum dolor sit amet.</p>
+                        <img src="/images/carousel_img_1.jpg" alt="">
                     </div>
                     <!-- fin de imagenes de carrusel -->
                     <!-- botones manuales -->
