--- a/site_ViveBio/public/css/header.css
+++ b/site_ViveBio/public/css/header.css
@@ -4,15 +4,49 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
-    padding-bottom: 10px;
+/*     padding-bottom: 10px; */
+}
+
+/*******************************************
+Header mobile
+**********************************************/
+
+.mobile_header {
+    width: 100%;
+    height: 70px;
+    /* background: linear-gradient(rgb(108, 245, 149)99%,rgba(108, 245, 149,0.9));
+    box-shadow: 2px 2px 20px 20px rgb(108, 245, 149); */
+    display: flex;
+    align-items: center;
+    position: absolute;
+    border: 1px solid rgba(127, 167, 148, 0.1);
+    z-index: 2;
+}
+
+.mobile_logo {
+    width: 25%;
+    text-align: start;
+    padding: 5px 0 0 5px;
+    font-size: 20px;
+}
+
+.mobile_logo img {
+    width: 80%;
+}
+
+.nav_mobile_menu {
+    width: 75%;
+    display: flex;
+    justify-content: flex-end;
+    padding-right: 10px;
+    font-size: 25px;
+    color: var(--verdeOscuro);
 }
 
 
-.header__logo img {
-    width: 200px;
-}
 
 
+/* 
 header .header__burger {
     display: block;
     color: rgb(0, 134, 34);
@@ -25,12 +59,17 @@ header .header__burger {
     border-radius: 8px;
     text-align: center;
     border: 1px solid black;
-}
+} */
 
-.header .menu {
+
+/* .header .menu {
     width: 60px;
     height: 50px;
     margin-top: 10px;
+}
+ */
+.header__logo{
+    display:none;
 }
 
 .header__busqueda {
