--- a/site_ViveBio/src/views/index.ejs
+++ b/site_ViveBio/src/views/index.ejs
@@ -16,19 +16,19 @@
                     <!-- imagenes de carrusel -->
                     <div class="slide first">
                         <p>Lorem ipsum dolor sit amet.</p>
-                        <img src="/images/carousel_img_1.jpg" alt="">
+                        <div class="img_1"></div>
                     </div>
                     <div class="slide">
                         <p>Lorem ipsum dolor sit amet.</p>
-                        <img src="/images/carousel_img_2.jpg" alt="">
+                        <div class="img_2"></div>
                     </div>
                     <div class="slide">
                         <p>Lorem ipsum dolor sit amet.</p>
-                        <img src="/images/carousel_img_3.jpg" alt="">
+                        <div class="img_3"></div>
                     </div>
                     <div class="slide">
                         <p>Lorem ipsum dolor sit amet.</p>
-                        <img src="/images/carousel_img_1.jpg" alt="">
+                        <div class="img_4"></div>
                     </div>
                     <!-- fin de imagenes de carrusel -->
                     <!-- botones manuales -->
