--- a/site_ViveBio/public/css/home.css
+++ b/site_ViveBio/public/css/home.css
@@ -105,10 +105,46 @@ Carrusel
     padding: 100px 0 100px;
 }
 
-.slides img {
+/* .slides img {
     width: 100%;
     height: 100%;
     object-fit: cover;
+} */
+
+.img_1 {
+    width: 100%;
+    height: 100%;
+    background-image: url(/images/carousel_img_1.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+
+.img_2 {
+    width: 100%;
+    height: 100%;
+    background-image: url(/images/carousel_img_2.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+
+.img_3 {
+    width: 100%;
+    height: 100%;
+    background-image: url(/images/carousel_img_3.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+
+.img_4 {
+    width: 100%;
+    height: 100%;
+    background-image: url(/images/carousel_img_1.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
 }
 
 
